# opencv_cpp_project_template

./: CMakeLists.txt  README.md
src/: camera_handler.cpp
